Switch to version 2.9.2

--- a/src/main/resources/hudson/plugins/view/dashboard/Messages.properties
+++ b/src/main/resources/hudson/plugins/view/dashboard/Messages.properties
@@ -7,7 +7,7 @@ Dashboard.NoDataAvailable=No data available
 Dashboard.TestStatisticsChart=Test Statistics Chart
 Dashboard.DisplayName=Dashboard
 Dashboard.LatestBuilds=Latest builds
-Dashboard.JenkinsJobsList=Hudson jobs list
+Dashboard.JenkinsJobsList= jobs list
 Dashboard.JobsGrid=Jobs Grid
 Dashboard.UnstableJobs=Unstable Jobs
 Dashboard.NoRecentBuildsFailed=No recent builds failed
@@ -21,3 +21,4 @@ Dashboard.Date=date
 Dashboard.Count=count
 Dashboard.SlavesStatistics=Slaves statistics
 Dashboard.Image=Image
+Dashboard.IframePortlet=Iframe Portlet
