--- a/src/main/resources/hudson/plugins/view/dashboard/stats/StatSlaves/statslaves_ja.properties
+++ b/src/main/resources/hudson/plugins/view/dashboard/stats/StatSlaves/statslaves_ja.properties
@@ -1,6 +1,6 @@
 # The MIT License
 #
-# Copyright (c) 2004-2010, Sun Microsystems, Inc.
+# Copyright (c) 2012, Seiji Sogabe
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -20,17 +20,9 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 # THE SOFTWARE.
 
-Add\ Dashboard\ Portlet\ to\ bottom\ of\ the\ view=Ajouter un Portlet en bas de la vue
-Add\ Dashboard\ Portlet\ to\ left\ column=Ajouter la Portlet Dashboard \u00e0 la colonne de gauche
-Add\ Dashboard\ Portlet\ to\ right\ column=Ajouter la Portlet Dashboard \u00e0 la colonne de droite
-Add\ Dashboard\ Portlet\ to\ the\ top\ of\ the\ view=Ajouter un Portlets en haut de la vue
-Portlets\ at\ the\ bottom\ of\ the\ page=Portlets du bas
-Dashboard\ Portlets=Dashboard Portlets
-Exclude\ disabled\ jobs=Ex\u00e9cuter les travaux d\u00e9sactiv\u00e9s
-Jobs=Travaux
-Portlets\ in\ the\ left\ column=Colonne de gauche
-Regular\ expression=Expression r\u00e9guli\u00e8re
-Portlets\ in\ the\ right\ column=Colonne de droite
-Show\ standard\ Jobs\ list\ at\ the\ top\ of\ the\ page=Montrer la liste Jobs standard en haut de la page
-Portlets\ at\ the\ top\ of\ the\ page=Portels Hautes
-Use\ a\ regular\ expression\ to\ include\ jobs\ into\ the\ view=Utiliser une expression r\u00e9guli\u00e8re pour inclure les travaux dans la vue
+Slaves=\u30b9\u30ec\u30fc\u30d6
+Online\ slaves=\u30aa\u30f3\u30e9\u30a4\u30f3
+Offline\ slaves=\u30aa\u30d5\u30e9\u30a4\u30f3
+Disconnected\ slaves=\u5207\u65ad\u4e2d
+Tasks\ in\ queue=\u30ad\u30e5\u30fc\u30a4\u30f3\u30b0\u4e2d
+Running\ jobs=\u30b8\u30e7\u30d6\u3092\u5b9f\u884c\u4e2d
